--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,3 +28,29 @@
 .left-0{
     left: 0;
 }
+
+.right-0{
+    right: 0;
+}
+.z-index-2{
+    z-index: 2;
+    
+}
+.new-top-video {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.new-top-video video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
