--- a/public/css/app.css
+++ b/public/css/app.css
@@ -268,6 +268,17 @@ img.vbox-figlio{
   }
 }
 
+.header {
+  position: relative;
+  background-color: black;
+  height: 100vh;
+  min-height: 25rem;
+  width: 100%;
+  overflow: hidden;
+  background-image: url("http://gotoperu-mx.s3-us-west-1.amazonaws.com/package/slider/AV704-1_1574181883.jpg");
+  background-size: 100%;
+}
+
 .new-top-video:before {
   content: "";
   position: absolute;
