--- a/resources/sass/_page.scss
+++ b/resources/sass/_page.scss
@@ -1,13 +1,13 @@
-//.header {
-//    position: relative;
-//    background-color: black;
-//    height: 100vh;
-//    min-height: 25rem;
-//    width: 100%;
-//    overflow: hidden;
-//    background-image: url("http://gotoperu-mx.s3-us-west-1.amazonaws.com/package/slider/AV704-1_1574181883.jpg");
-//    background-size: 100%;
-//}
+.header {
+    position: relative;
+    background-color: black;
+    height: 100vh;
+    min-height: 25rem;
+    width: 100%;
+    overflow: hidden;
+    background-image: url("http://gotoperu-mx.s3-us-west-1.amazonaws.com/package/slider/AV704-1_1574181883.jpg");
+    background-size: 100%;
+}
 //header.header .overlay {
 //    position: absolute;
 //    top: 0;
