--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,7 @@
 @import 'page';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import '~bootstrap-icons/font/bootstrap-icons.css';
 
 //venobox
 @import "~venobox/venobox/venobox.css";
@@ -17,6 +18,7 @@
 
 //swipper
 @import "~swiper/swiper";
+
 
 
 .t-corrido{
