--- a/resources/sass/_page.scss
+++ b/resources/sass/_page.scss
@@ -85,6 +85,7 @@
     cursor: pointer;
 }
 
+
 //MENU
 //MENU
 .menu-container {
@@ -158,22 +159,22 @@ i.icono {
 }
 
 //max
-.position-absolute-top{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    //left: 0;
-    right: 0;
-    z-index: 1;
-}
-.position-absolute-bottom{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    //left: 0;
-    right: 0;
-    z-index: 2;
-}
+//.position-absolute-top{
+//    position: absolute;
+//    top: 0;
+//    width: 100%;
+//    //left: 0;
+//    right: 0;
+//    z-index: 1;
+//}
+//.position-absolute-bottom{
+//    position: absolute;
+//    bottom: 0;
+//    width: 100%;
+//    //left: 0;
+//    right: 0;
+//    z-index: 2;
+//}
 //bgrgba
 .rgba-white-5{
     background: rgba(255,255,255,.5);
@@ -235,6 +236,25 @@ i.icono {
     background-repeat: repeat-x;
 }
 
+//itinerary
+.itinerary {
+    margin: 10px 0 30px 0;
+    border-top: 1px solid #dedede;
+    border-bottom: 1px solid #dedede;
+    position: relative;
+}
+.itinerary-summary {
+column-count: 2;
+-webkit-column-count: 2;
+-moz-column-count: 2;
+-o-column-count: 2;
+column-gap: 1.5em;
+-webkit-column-gap: 2em;
+-moz-column-gap: 1.5em;
+-o-column-gap: 1.5em;
+//padding: 20px 0;
+//margin-left: 140px;
+}
 //destino
 .bx-img-destinohome a:before {
     position: absolute;
