--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,6 @@
 // Body
 //$body-bg: #f8fafc;
-$body-bg: white;
+$body-bg:#ffffff ;
 
 // Typography
 //$font-family-sans-serif: 'Avenir', 'Nunito', sans-serif;
@@ -10,18 +10,40 @@ $line-height-base: 1.6;
 $font-weight-base: 300;
 
 // Colors
-$blue: #3490dc;
-$indigo: #6574cd;
-$e-purple: #9561e2e3;
-$pink: #f66d9b;
-$red: #e3342f;
-$orange: #f6993f;
-$yellow: #ffed4a;
-$green: #38c172;
-$teal: #4dc0b5;
-$cyan: #6cb2eb;
-$primary: #007bff;
-$info: #00b4e9e3;
+//$blue: #3490dc;
+//$indigo: #6574cd;
+//$e-purple: #9561e2e3;
+//$pink: #f66d9b;
+//$red: #e3342f;
+//$orange: #f6993f;
+//$yellow: #ffed4a;
+//$green: #38c172;
+//$teal: #4dc0b5;
+//$cyan: #6cb2eb;
+//$primary: #007bff;
+//$info: #00b4e9e3;
+//$gray-900: #212529 !default;
+//$dark: $gray-900 !default;
+$gray-600: #6c757d !default;
+$gray-100: #f8f9fa !default;
+$gray-900: #212529 !default;
+
+$blue:    #0d6efd !default;
+$red:     #dc3545 !default;
+//$orange:  #fd7e14 !default;
+$yellow:  #ffc107 !default;
+$green:   #198754 !default;
+//$teal:    #20c997 !default;
+$cyan:    #0dcaf0 !default;
+
+$primary:       $blue !default;
+$secondary:     $gray-600 !default;
+$success:       $green !default;
+$info:          $cyan !default;
+$warning:       $yellow !default;
+$danger:        $red !default;
+$light:         $gray-100 !default;
+$dark:          $gray-900 !default;
 
 $font-weight-semi-bold:          600 !default;
 .font-weight-semi-bold  { font-weight: $font-weight-semi-bold !important; }
@@ -40,9 +62,21 @@ $e-dark-light: #969696e3 !default;
 $e-lime: #a9d80fe3 !default;
 $e-cream: #f1f4e1e0 !default;
 $e-orange: #d05903e3 !default;
+$e-amber: #feeed3e3 !default;
 
-$theme-colors: () !default;
-$theme-colors: map-merge((
+$theme-colors: (
+    "primary":    $primary,
+    "secondary":  $secondary,
+    "success":    $success,
+    "info":       $info,
+    "warning":    $warning,
+    "danger":     $danger,
+    "light":      $light,
+    "dark":       $dark
+);
+
+// Create your own map
+$custom-colors: (
     "g-green": $g-green,
     "g-yellow": $g-yellow,
     "g-dark": $g-dark,
@@ -55,21 +89,87 @@ $theme-colors: map-merge((
     "e-dark": $e-dark,
     "e-dark-light": $e-dark-light,
     "e-lime": $e-lime,
-    "e-purple": $e-purple,
     "e-cream": $e-cream,
     "e-orange": $e-orange,
-
-), $theme-colors);
-
-$sizes: () !default;
-$sizes: map-merge(
-        (
-            35: 35%,
-            40: 40%,
-        ),
-        $sizes
+    "e-amber": $e-amber,
 );
 
+// Merge the maps
+$theme-colors: map-merge($theme-colors, $custom-colors);
+
+// Merge the maps
+//$theme-colors: map-merge($theme-colors, $custom-colors);
+
+$position-values: (
+    0: 0,
+    5: 5%,
+    10: 10%,
+    25: 25%,
+    50: 50%,
+    75: 75%,
+    100: 100%
+) !default;
+
+$utilities: () !default;
+$utilities: map-merge(
+        (
+            // Sizing utilities
+            "width": (
+                property: width,
+                class: w,
+                values: (
+                    25: 25%,
+                    50: 50%,
+                    75: 75%,
+                    100: 100%,
+                    35: 35%,
+                    40: 40%,
+                    auto: auto
+                )
+            ),
+            "height": (
+                property: height,
+                class: h,
+                values: (
+                    25: 25%,
+                    50: 50%,
+                    70: 70%,
+                    75: 75%,
+                    100: 100%,
+                    auto: auto
+                )
+            ),
+            "viewport-height": (
+                property: height,
+                class: vh,
+                values: (100: 100vh, 70: 70vh)
+            ),
+
+        ),
+        $utilities
+);
+
+
+$font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
+$font-size-base-7:      1rem !default;
+
+$h1-font-size:                $font-size-base * 2.5 !default;
+$h2-font-size:                $font-size-base * 2 !default;
+$h3-font-size:                $font-size-base * 1.75 !default;
+$h4-font-size:                $font-size-base * 1.5 !default;
+$h5-font-size:                $font-size-base * 1.25 !default;
+$h6-font-size:                $font-size-base !default;
+
+// scss-docs-start font-sizes
+$font-sizes: (
+    1: $h1-font-size,
+    2: $h2-font-size,
+    3: $h3-font-size,
+    4: $h4-font-size,
+    5: $h5-font-size,
+    6: $h6-font-size,
+    7: $font-size-base-7
+) !default;
 
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575.98px) {  }
